objects/ASI_KOR_RSD_Proposal_By_Brand__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_1_Month_Ago__c</fullName>
        <label>Actual Volume (1 Month Ago)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Actual_Volume_1_Month_Ago__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_2_Months_Ago__c</fullName>
        <label>Actual Volume (2 Months Ago)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Actual_Volume_2_Months_Ago__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipName>ASI_KOR_RSD_Proposal_By_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Target_VI__c</fullName>
        <label>Budget Target VI</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Budget_Target_VI__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Target_Volume__c</fullName>
        <label>Budget Target Volume</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Budget_Target_Volume__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_Pending__c</fullName>
        <label>CA Amount (Pending)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Total_CA_Amount_excl_Basic__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Submitted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Budget_Status__c</fullName>
        <formula>/* logic before CRM P4.2 
IF(  ASI_KOR_Total_CA_Amount_excl_Basic__c   &gt;  ASI_KOR_CA_Budget__c ,  &quot;Exceed Target&quot; ,  &quot;Within Target&quot; )
*/ 
IF(ASI_KOR_Target_Volume_Pending__c = 0, 
  &quot;Within Target&quot;,
  IF( ( ( ASI_KOR_Total_Incentive_Amount_Pending__c / ASI_KOR_Target_Volume_Pending__c )&gt; (ASI_KOR_Budget_Target_VI__c/ASI_KOR_Budget_Target_Volume__c)), &quot;Exceed Target&quot; , &quot;Within Target&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Budget__c</fullName>
        <label>CA Budget</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_CA_Budget__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Category__c</fullName>
        <formula>ASI_KOR_Brand__r.ASI_KOR_Product_Categoray__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Growth__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Last_3_month_Actual_Average_Volu__c) || ASI_KOR_Last_3_month_Actual_Average_Volu__c == 0),0,ASI_KOR_Target_Volume__c /  ASI_KOR_Last_3_month_Actual_Average_Volu__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Last_3_month_Actual_Average_UC__c</fullName>
        <label>P3M Act. Unit Cost</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Last_3_month_Actual_average_UC__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Last_3_month_Actual_Average_Volu__c</fullName>
        <label>P3M Act. Volume</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Last_3_month_Actual_Average_Volu__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_NSD_Proposal_By_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NSD Proposal By Brand</label>
        <referenceTo>ASI_KOR_NSD_Proposal_By_Brand__c</referenceTo>
        <relationshipName>ASI_KOR_RSD_Proposal_By_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Proposal_Unit_Cost_Basic_CA__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Target_Volume__c) || ASI_KOR_Target_Volume__c== 0),0,ASI_KOR_Total_Incentive_Amount_Proposal__c /  ASI_KOR_Target_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Proposal_Unit_Cost_CA_Only__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Target_Volume__c) || ASI_KOR_Target_Volume__c== 0),0,ASI_KOR_Total_CA_Amount_excl_Basic__c /  ASI_KOR_Target_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Unit Cost (CA Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_RSD_Proposal_Header__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RSD CA Proposal</label>
        <referenceTo>ASI_KOR_RSD_Proposal_Header__c</referenceTo>
        <relationshipName>ASI_KOR_RSD_ProposRSD_Proposal_By_Brands</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Roll_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll-up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume_Pending__c</fullName>
        <label>Target Volume (Pending)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Target_Volume_Pending__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Submitted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Target_Volume__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_excl_Basic__c</fullName>
        <label>Total CA (excl. Basic)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Total_CA_Amount_excl_Basic__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Pending__c</fullName>
        <label>Total VI (Pending)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Total_Incentive_Amount_Proposal__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Submitted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Proposal__c</fullName>
        <label>Total VI</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Total_Incentive_Amount_Proposal__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Roll_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_1_Month_Ago_Number__c</fullName>
        <formula>ASI_KOR_Total_VI_1_Month_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VI (1 Month Ago) Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_1_Month_Ago__c</fullName>
        <label>Total VI (1 Month Ago)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Total_VI_1_Month_Ago__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_2_Months_Ago_Number__c</fullName>
        <formula>ASI_KOR_Total_VI_2_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VI (2 Months Ago) Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_2_Months_Ago__c</fullName>
        <label>Total VI (2 Months Ago)</label>
        <summarizedField>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_Total_VI_2_Months_Ago__c</summarizedField>
        <summaryForeignKey>ASI_KOR_BM_Proposal_By_Brand__c.ASI_KOR_RSD_Proposal_By_Brand__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_1_Month_Ago__c</fullName>
        <formula>ASI_KOR_Total_VI_1_Month_Ago__c / if(ASI_KOR_Actual_Volume_1_Month_Ago__c=0, 1, ASI_KOR_Actual_Volume_1_Month_Ago__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost (1 Month Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>RSD Sales Planning By Brand</label>
    <nameField>
        <displayFormat>RPI-{000000000}</displayFormat>
        <label>RSD Sales Planning By Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSD Sales Planning By Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>